--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,16 @@
     "jsx": "preserve",
     "incremental": true,
     "plugins": [{ "name": "next" }],
-    "baseUrl": ".",
+    "baseUrl": "src",               // 👈 IMPORTANT: was "."
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["*"]                  // 👈 NOT ["src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
